--- a/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
@@ -7,7 +7,7 @@
       d:DesignHeight="700" d:DesignWidth="1000">
 
     <Grid Name="grdRCompSteps">
-        <TextBlock Height="578" HorizontalAlignment="Left" Margin="44,75,0,0" Name="txtBlkFullRecipe" Text="ALL THE RECIPE STEPS GO IN HERE" VerticalAlignment="Top" Width="914" Background="WhiteSmoke" />
+        <TextBlock Height="578" HorizontalAlignment="Left" Margin="44,75,0,0" Name="txtBlkFullRecipe" Text="" VerticalAlignment="Top" Width="914" Background="WhiteSmoke" FontSize="16" />
         <Button Content="Toogle View" Height="48" HorizontalAlignment="Right" Margin="0,12,22,0" Name="btnCompToogleView" VerticalAlignment="Top" Width="81" Background="#FFC1C1FF" Click="btnCompToogleView_Click" />
         <Button Content="Back" Height="48" HorizontalAlignment="Left" Margin="44,12,0,0" Name="btnRecipeCompBack" VerticalAlignment="Top" Width="75" Click="btnRecipeCompBack_Click" />
     </Grid>
