--- a/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
@@ -7,12 +7,11 @@
       d:DesignHeight="700" d:DesignWidth="1000">
 
     <Grid Name="grdRIndiSteps">
-         <TextBlock Height="182" HorizontalAlignment="Left" Margin="516,101,0,0" Name="txtBlkTips" Text="TIPS: TIPS TO THE NOOB CHEF" VerticalAlignment="Top" Width="449" Background="WhiteSmoke" />
-        <Button Content="Toogle View" Height="48" HorizontalAlignment="Left" Margin="884,12,0,0" Name="btnIndivToogleView" VerticalAlignment="Top" Width="81" Background="#FFC1C1FF" Click="btnIndiToogleView_Click" />
-        <Button Content="&lt;--" Height="300" HorizontalAlignment="Left" Margin="29,356,0,0" Name="btnIndivRecipePrev" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeBack_Click" FontSize="26" />
-        <Button Content="--&gt;" Height="300" HorizontalAlignment="Left" Margin="864,356,0,0" Name="btnIndivRecipeNext" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeNext_Click" FontSize="26" />
-        <TextBlock Height="300" HorizontalAlignment="Left" Margin="177,356,0,0" Name="txtBlkIndivRecipeStep" Text="Recipe Instructions Go In Here" VerticalAlignment="Top" Width="657" Background="#FFF4F8E2" />
-        <Border BorderBrush="Silver" BorderThickness="5" Height="245" HorizontalAlignment="Left" Margin="29,74,0,0" Name="brdrImagePlaceholder" VerticalAlignment="Top" Width="420" Background="#FFBF7CA6">
+        <Button Content="Toggle View" Height="48" HorizontalAlignment="Left" Margin="864,12,0,0" Name="btnIndivToogleView" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndiToogleView_Click" />
+        <Button Content="&lt;--" Height="249" HorizontalAlignment="Left" Margin="29,407,0,0" Name="btnIndivRecipePrev" VerticalAlignment="Top" Width="101" Background="DarkGray" Click="btnIndivRecipeBack_Click" FontSize="26" />
+        <Button Content="--&gt;" Height="249" HorizontalAlignment="Left" Margin="864,407,0,0" Name="btnIndivRecipeNext" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeNext_Click" FontSize="26" />
+        <TextBlock Height="159" HorizontalAlignment="Left" Margin="172,449,0,92" Name="txtBlkStep" Text="Recipe Instructions Go In Here" VerticalAlignment="Center" Width="657" Background="#FFF4F8E2" FontSize="22" />
+        <Border BorderBrush="Silver" BorderThickness="5" Height="363" HorizontalAlignment="Left" Margin="231,30,0,0" Name="brdrImagePlaceholder" VerticalAlignment="Top" Width="541" Background="#FFBF7CA6">
             <Label Content="IMAGE PLACEHOLDER" Height="28" Name="lblimgPH" Width="152" />
         </Border>
         <Button Content="Back" Height="48" HorizontalAlignment="Left" Margin="29,12,0,0" Name="btnRecipeIndivBack" VerticalAlignment="Top" Width="75" Click="btnRecipeIndivBack_Click" />
