--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
@@ -4,19 +4,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="1000">
+      d:DesignHeight="700" d:DesignWidth="1000" Background="#81D8E4FC">
 
     <Grid Name="grdCTLesson">
         <Label Content="Mango Pudding Cake" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblMPCRecipeTitle" VerticalAlignment="Top" Width="391" />
         <Label Content="LESSON #IV: Whisking" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNum" VerticalAlignment="Top" Width="294" />
         <Label Content="How to whisk ingredients" FontFamily="Leelawadee" FontSize="28" Height="48" HorizontalAlignment="Left" Margin="631,41,0,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="327" />
-        <TextBlock Height="277" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFE8DFDF" />
+        <TextBlock Height="277" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFFDFDFD" />
         <Grid Height="249" HorizontalAlignment="Left" Margin="651,398,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
             <Label Content="Lessons:" FontFamily="Leelawadee" FontSize="20" Height="38" Name="lblLessonsHeader" Margin="0,0,0,212" />
-            <Border Name="imgLessonI"  Margin="14,44,265,0" Height="45" VerticalAlignment="Top" BorderThickness="5" BorderBrush="White" Background="#FFBF7CA6" />
-            <Border Name="imgLessonII" Margin="14,95,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
-            <Border MouseLeftButtonDown="imgLessonIII_MouseLeftButtonDown" Name="imgLessonIII" Margin="14,146,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
-            <Border Name="imgLessonIV"  Margin="14,197,265,0" Height="45" VerticalAlignment="Top" Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" />
+            <Border Name="imgLessonI"  Margin="14,44,265,0" Height="45" VerticalAlignment="Top" BorderThickness="5" BorderBrush="White" Background="#FFD4D4D4" />
+            <Border Name="imgLessonII" Margin="14,95,265,0" Height="45" VerticalAlignment="Top" Background="#FFD4D4D4" BorderBrush="White" BorderThickness="5" />
+            <Border MouseLeftButtonDown="imgLessonIII_MouseLeftButtonDown" Name="imgLessonIII" Margin="14,146,265,0" Height="45" VerticalAlignment="Top" Background="#FFD4D4D4" BorderBrush="White" BorderThickness="5" />
+            <Border Name="imgLessonIV"  Margin="14,197,265,0" Height="45" VerticalAlignment="Top" Background="#FFD4D4D4" BorderBrush="White" BorderThickness="5" />
             <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,44,0,0" Name="lblLessonI" VerticalAlignment="Top" Width="116" />
             <Label Content="Decorating" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,95,0,0" Name="lblLessonII" VerticalAlignment="Top" Width="147" />
             <Label Content="Folding" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,146,0,0" Name="lblLessonIII" VerticalAlignment="Top" Width="116" />
